[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HiVis"
authors = [{name = "Roy Novoselsky", email = "roy.novoselsky@weizmann.ac.il"}]
version = "0.1.0"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type="text/markdown"}
classifiers = [
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"numpy==2.1.3",
	"scipy==1.15.2",
	"matplotlib==3.10.1",
	"pandas==2.2.3",
	"seaborn==0.13.2",
	"scanpy==1.11.0",
	"anndata==0.11.3",
	"adjustText",
	"pyarrow==19.0.1",
	"pillow==11.1.0",
	"tqdm==4.67.1",
	"shapely==2.0.7",
	"geopandas==1.0.1",
	"dill==0.3.9",
	"tifffile==2025.3.13",
	"statsmodels==0.14.4"
]
requires-python = ">=3.10"
dynamic = ["description"]

[project.urls]
Home = "https://github.com/roynov01/HiVis"
Documentation = "https://hivis.readthedocs.io/en/latest/"

